newingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: external-nginx
  rules:
  - host: www.ljroy.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port:
              number: 80
  - host: 2048.ljroy.com
    http: 
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: game-service
            port:
              number: 80

  tls:
    - hosts:
      - www.ljroy.com
      - 2048.ljroy.com
      secretName: ljroy-tls
